@@ -9,6 +9,7 @@ Overview of changes in lightdm 1.1.0
     * Remove unused --user-session, --greeter-session, --minimum-vt,
       --minimum-display-number options
     * Use 'default' as the default greeter (make a symlink)
+    * GTK greeter now initializes i18n
 
 Overview of changes in lightdm 1.0.0
 
